--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <li><a href="https://about.google/?utm_source=google-MX&utm_medium=referral&utm_campaign=hp-footer&fg=1">Sobre Google</a></li>
             <li><a href="https://www.google.com.mx/intl/es_mx/ads/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1">Publicidad</a></li>
             <li><a href="https://www.google.com.mx/services/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpbfooter&fg=1">Negocios</a></li>
-            <li><a href="https://google.com/search/howsearchworks/?fg=1">Cómo funciona la buscqueda</a></li>
+            <li><a href="https://google.com/search/howsearchworks/?fg=1">Cómo funciona la busqueda</a></li>
         </ul>
 
         <!--LISTA DERECHA-->
